--- a/memory.html
+++ b/memory.html
@@ -9,10 +9,10 @@
     <script src="Homebarspill.js"></script>
 </head>
 <body>
-    <section class="memory-spill">
-        <div class="memory-kort">
-            <img class="framsiden" src="" alt="">
-            <img src="" alt="kort">
+    <section class="memory-game">
+        <div class="memory-card">
+            <img class="front-side" src="" alt="">
+            <img src="" alt="card">
         </div>
     </section>
 </body>
