--- a/memory.html
+++ b/memory.html
@@ -12,7 +12,7 @@
     <section class="memory-game">
         <div class="memory-card">
             <img class="front-side" src="" alt="">
-            <img src="" alt="card">
+            <img src="" alt="kort">
         </div>
     </section>
 </body>
