--- a/html/hard.html
+++ b/html/hard.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Memory Game</title>
-    <link rel="stylesheet" href="../css/memory.css">
-    <script src="../js/Homebar.js"></script>
-    <script src="../js/memory.js"></script>
+    <title>Document</title>
 </head>
 <body>
-
-
+    
 </body>
 </html>
