--- a/html/easy.html
+++ b/html/easy.html
@@ -10,6 +10,8 @@
     <script src="../js/memory.js"></script>
 </head>
 <body>
+
+        <home-bar heading="Memory-Game" info="" > </home-bar>
 <h1>Easy mode</h1>
 
 </body>
