--- a/html/hard.html
+++ b/html/hard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/memory.css">
+    <script src="../js/Homebar.js"></script>
+    <script src="../js/memory.js"></script>
 </head>
 <body>
         <home-bar heading="Memory-Game" info="" > </home-bar>
