--- a/html/easy.html
+++ b/html/easy.html
@@ -14,5 +14,8 @@
         <home-bar heading="Memory-Game" info="" > </home-bar>
 <h1>Easy mode</h1>
 
+<script>
+    setup ();
+ </script>
 </body>
 </html>
