--- a/html/hard.html
+++ b/html/hard.html
@@ -11,5 +11,10 @@
 </head>
 <body>
         <home-bar heading="Memory-Game" info="" > </home-bar>
+
+
+<script>
+     setup ();
+</script>
 </body>
 </html>
