--- a/html/normal.html
+++ b/html/normal.html
@@ -11,5 +11,9 @@
 </head>
 <body>
         <home-bar heading="Memory-Game" info="" > </home-bar>
+
+<script>
+    setup ();
+ </script>
 </body>
 </html>
