--- a/html/hjem.html
+++ b/html/hjem.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="../css/memory.css">
     <script src="../js/Homebar.js"></script>
     <script src="../js/memory.js"></script>
+    <link rel="stylesheet" href="../css/hjem.css">
 </head>
 <body>
   <home-bar heading="Memory-Game" info="" > </home-bar>
 
   <header>
-    <h1>Hjem</h1>
+    <img src="../media/header.jpg" alt="">
   </header>
-
   
 <script>
 setup ();
