--- a/html/hjem.html
+++ b/html/hjem.html
@@ -16,6 +16,11 @@
   <header>
     <img src="../media/header.jpg" alt="">
   </header>
+
+ <article>
+   Hei og velkommen til memory game! Det finnes tre forskjellige vanskelighetsgrader easy, normal og hard. Du skal finne parene som hører sammen. Lykke til! ( ͡° ͜ʖ ͡°)
+ </article>
+ <br>
   
 <script>
 setup ();
