--- a/html/normal.html
+++ b/html/normal.html
@@ -5,12 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Memorygame</title>
-    <link rel="stylesheet" href="../css/memory.css">
+    <link rel="stylesheet" href="../css/normal.css">
     <script src="../js/Homebar.js"></script>
     <script src="../js/memory.js"></script>
 </head>
 <body>
         <home-bar heading="Memory-Game" info="" > </home-bar>
+
+
+
+        <section class="memory-game">
+                <div class="memory-card">
+                  <img class="front-face" src="../media/normal/happy.png" alt="happy">
+                  <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                </div>
+                <div class="memory-card">
+                        <img class="front-face" src="../media/normal/happy.png" alt="happy">
+                        <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                      </div>
+
+
+                <div class="memory-card">
+                <img class="front-face" src="../media/normal/cry.png" alt="cry">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                </div>
+                <div class="memory-card">
+                <img class="front-face" src="../media/normal/cry.png" alt="cry">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+             </div>
+
+
+                <div class="memory-card">
+                <img class="front-face" src="../media/normal/inlove.png" alt="love">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                </div>
+                <div class="memory-card">
+                <img class="front-face" src="../media/normal/inlove.png" alt="love">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                 </div>
+              
+
+                 <div class="memory-card">
+                        <img class="front-face" src="../media/normal/nerd.png" alt="nerd">
+                        <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                        </div>
+                        <div class="memory-card">
+                        <img class="front-face" src="../media/normal/nerd.png" alt="nerd">
+                        <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                         </div>
+        
+
+            <div class="memory-card">
+                <img class="front-face" src="../media/normal/party.png" alt="party">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+            </div>
+         <div class="memory-card">
+             <img class="front-face" src="../media/normal/party.png" alt="party">
+             <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+        </div>
+
+
+
+        <div class="memory-card">
+                <img class="front-face" src="../media/normal/shook.png" alt="shook">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+                </div>
+                <div class="memory-card">
+                <img class="front-face" src="../media/normal/shook.png" alt="shook">
+                <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+     </div>
+
+
+     <div class="memory-card">
+            <img class="front-face" src="../media/normal/skuffa.png" alt="skuffa">
+            <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+            </div>
+            <div class="memory-card">
+            <img class="front-face" src="../media/normal/skuffa.png" alt="skuffa">
+            <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+    </div>
+
+    <div class="memory-card">
+            <img class="front-face" src="../media/normal/frontface.png" alt="sur">
+            <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+            </div>
+            <div class="memory-card">
+            <img class="front-face" src="../media/normal/sur.png" alt="sur">
+            <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
+             </div>
+
+
+              </section>
+
 
 <script>
     setup ();
