--- a/html/easy.html
+++ b/html/easy.html
@@ -8,11 +8,64 @@
     <link rel="stylesheet" href="../css/memory.css">
     <script src="../js/Homebar.js"></script>
     <script src="../js/memory.js"></script>
+    <link rel="stylesheet" href="easy.css">
 </head>
 <body>
 
         <home-bar heading="Memory-Game" info="" > </home-bar>
 <h1>Easy mode</h1>
+
+<section class="memory">
+
+       <div class="memory-card">
+           <img class="front-face" scr="black.jpeg" alt="Black">
+           <img class="back-face" scr="lord.jpeg" alt="Lord">
+       </div>
+
+       <div class="memory-card">
+          <img class="front-face" scr="black.jpeg" alt="Black">
+          <img class="back-face" scr="lord.jpeg" alt="Lord">
+       </div>
+
+
+  
+        <div class="memory-card">
+           <img class="front-face" scr="black.jpeg" alt="Black">
+           <img class="back-face" scr="pepe.jpeg" alt="Pepe">
+        </div>
+    
+        <div class="memory-card">
+           <img class="front-face" scr="black.jpeg" alt="Black">
+           <img class="back-face" scr="pepe.jpeg" alt="Pepe">
+        </div>
+
+
+
+        <div class="memory-card">
+            <img class="front-face" scr="black.jpeg" alt="Black">
+            <img class="back-face" scr="sanic.jpeg" alt="Sanic">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-face" scr="black.jpeg" alt="Black">
+            <img class="back-face" scr="sanic.jpeg" alt="Sanic">
+        </div>
+
+            
+
+        <div class="memory-card">
+            <img class="front-face" scr="black.jpeg" alt="Black">
+            <img class="back-face" scr="thanos.jpeg" alt="Thanos">
+        </div>
+
+        <div class="memory-card">
+            <img class="front-face" scr="black.jpeg" alt="Black">
+            <img class="back-face" scr="thanos.jpeg" alt="Thanos">
+        </div>
+
+</section>
+
+
 
 <script>
     setup ();
