--- a/html/normal.html
+++ b/html/normal.html
@@ -10,11 +10,12 @@
     <script src="../js/memory.js"></script>
 </head>
 <body>
-        <home-bar heading="Memory-Game" info="" > </home-bar>
+     
+    <home-bar heading="Memory-Game" info="" > </home-bar>
 
+    <h3 align="center"> Normal mode</h3>
 
-
-        <section class="memory-game">
+        <div class="memory-game">
                 <div class="memory-card">
                   <img class="front-face" src="../media/normal/happy.png" alt="happy">
                   <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
@@ -95,7 +96,9 @@
              </div>
 
 
-              </section>
+            </div>
+
+             
 
 
 <script>
