--- a/html/hard.html
+++ b/html/hard.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="..///css/hard.css">
     <script src="../js/Homebar.js"></script>
-    <script src="../js/memory.js"></script>
+    
 </head>
 <body>
     <home-bar heading="Memory-Game-Hard" info="" > </home-bar>
@@ -109,7 +109,7 @@
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
     </section>
-
+    <script src="..//js/memory.js"></script>
 <script>
  setup ();
 </script>
