--- a/html/normal.html
+++ b/html/normal.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="memory-card">
-            <img class="front-face" src="../media/normal/frontface.png" alt="sur">
+            <img class="front-face" src="../media/normal/sur.png" alt="sur">
             <img class="back-face" src="../media/normal/frontface.png" alt="Memory Card">
             </div>
             <div class="memory-card">
