--- a/html/hard.html
+++ b/html/hard.html
@@ -12,99 +12,99 @@
 <body>
     <home-bar heading="Memory-Game-Hard" info="" > </home-bar>
     <section class="Memory-Game-Hard">
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="brasil">
             <img class="front-face" src="..//media/hard/brasil.png" alt="brasil">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="brasil">
             <img class="front-face" src="..//media/hard/brasil1.png" alt="brasil">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="danmark">
             <img class="front-face" src="..//media/hard/danmark.png" alt="danmark">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="danmark">
             <img class="front-face" src="..//media/hard/danmark1.png" alt="danmark">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="england">
             <img class="front-face" src="..//media/hard/england.png" alt="england">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="england">
             <img class="front-face" src="..//media/hard/england1.png" alt="england">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="india">
             <img class="front-face" src="..//media/hard/india.png" alt="india">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="india">
             <img class="front-face" src="..//media/hard/india1.png" alt="india">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="kina">
             <img class="front-face" src="..//media/hard/kina.png" alt="kina">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="kina">
             <img class="front-face" src="..//media/hard/kina1.png" alt="kina">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="mexico">
             <img class="front-face" src="..//media/hard/mexico.png" alt="mexico">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="mexico">
             <img class="front-face" src="..//media/hard/mexico1.png" alt="mexico">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="norge">
             <img class="front-face" src="..//media/hard/norge.png" alt="norge">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="norge">
             <img class="front-face" src="..//media/hard/norge1.png" alt="norge">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="spania">
             <img class="front-face" src="..//media/hard/spania.png" alt="spania">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="spania">
             <img class="front-face" src="..//media/hard/spania1.png" alt="spania">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="sverige">
             <img class="front-face" src="..//media/hard/sverige.png" alt="sverige">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="sverige">
             <img class="front-face" src="..//media/hard/sverige1.png" alt="sverige">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="usa">
             <img class="front-face" src="..//media/hard/usa.png" alt="usa">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="usa">
             <img class="front-face" src="..//media/hard/usa1.png" alt="usa">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="argentina">
             <img class="front-face" src="..//media/hard/argentina.png" alt="argentina">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="argentina">
             <img class="front-face" src="..//media/hard/argentina1.png" alt="argentina">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="australia">
             <img class="front-face" src="..//media/hard/australia.png" alt="australia">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
-        <div class="memory-card" data-framework="react">
+        <div class="memory-card" data-name="australia">
             <img class="front-face" src="..//media/hard/austalia1.png" alt="australia">
             <img class="back-face" src="..//media/hard/bgc.png" alt="Memory Card">
         </div>
