--- a/html/easy.html
+++ b/html/easy.html
@@ -16,7 +16,7 @@
 <section class="memory-game">
 
        <div class="memory-card">
-           <img class="front-face" scr="../media/easy/lord.png" alt="Lord">
+           <img class="front-face" src="../media/easy/lord.png" alt="Lord">
            <img class="back-face" scr="../media/easy/black.png" alt="Memory-Card">
        </div>
       
